resolves conflict, tuned up view, test success

--- a/lib/views/menu.erb
+++ b/lib/views/menu.erb
@@ -1,5 +1,4 @@
-<%= @menu.name %>
-<%= @dishes.name %>
-<% @dishes.each do |dish| %>
-<%= dish[:name] %>
+<%= @menu.name %> <br>
+<% @dishes.each do |dish| %> <br>
+<%= dish[:name] %> <br>
 <% end %>
