changed the variable name used for creating menu and dish deleted the then show me page action corected the get menu section in the controller file applied proper indentation in the menu.erb file created a new test to check if menu exist int the database

--- a/lib/views/menu.erb
+++ b/lib/views/menu.erb
@@ -1,8 +1,4 @@
-<%= @menu.name %>
-<%= @dishes.name %>
-<<<<<<< HEAD
-=======
-<% @dishes.each do |dish| %>
-<%= dish[:name] %>
+<%= @menu.name %> <br>
+<% @dishes.each do |dish| %> <br>
+  <%= dish[:name] %>
 <% end %>
->>>>>>> 9bf68170a1a8a06b19093bf14dc0a1eccbdf4651
