--- a/lib/views/login.erb
+++ b/lib/views/login.erb
@@ -1,5 +1,5 @@
 <form action="/auth/login" method="post">
   <p>Username: <input type="text" name="user[username]" /></p>
   <p>Password: <input type="password" name="user[password]" /></p>
-  <input type="submit" value="Log In" />
+  <input type="submit" id="login" value="Log In" />
 </form>
