reviewed logic in controller section

--- a/lib/views/menu.erb
+++ b/lib/views/menu.erb
@@ -4,6 +4,6 @@
   <form method="POST" action="/order_method">
       <input type="hidden" name="menu" value= "<%= @menu.name %>" >
       <input type="hidden" name="dish" value= "<%= dish.name %>" >
-      <button type="button" type='submit' value='Add To Cart'>Order Now</button>
+      <button type="Submit" value='Add To Cart'>Order Now</button>
   </form>
 <% end %>
