--- a/lib/views/menu.erb
+++ b/lib/views/menu.erb
@@ -7,3 +7,9 @@
       <input type="submit" value='Order Now'>
   </form>
 <% end %>
+
+<% @orderid %>
+<form method="post" action="/view_cart">
+    <input type="hidden" name="order" value= "<%= @orderid %>" >
+    <input type="submit" value='Cart'>
+</form>
